# PROGETTO-CI-CD

./: README.md
my-first-CI-CD-a22187af950282f7eac363b3098e94231f281bb5/: Jenkinsfile  Readme_Flask.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  version.info
my-first-CI-CD-a22187af950282f7eac363b3098e94231f281bb5/helm-chart/: Chart.yaml  values.yaml
my-first-CI-CD-a22187af950282f7eac363b3098e94231f281bb5/helm-chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
